--- a/styles/public/base.css
+++ b/styles/public/base.css
@@ -157,6 +157,42 @@ header {
     font-size: 1em;
     line-height: 1.31em; }
 
+#descricao {
+  margin: 30px auto;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  min-height: 370px; }
+  #descricao img {
+    padding: 6.4px;
+    border: 1px solid #D5D5D5; }
+  #descricao h1 {
+    font-style: italic;
+    font-size: 1.25em;
+    margin: 10px auto; }
+  #descricao p {
+    width: 100%;
+    font-size: 0.875em; }
+  #descricao .carousel-caption {
+    position: initial !important;
+    color: #000; }
+  #descricao .carousel-indicators {
+    bottom: -15px; }
+    #descricao .carousel-indicators li {
+      border: 1px solid #707070;
+      background-color: #D5D5D5; }
+    #descricao .carousel-indicators .active {
+      background-color: #808080; }
+  #descricao .carousel-control.right {
+    background-image: none; }
+  #descricao .carousel-control.left {
+    background-image: none; }
+  #descricao .item img {
+    display: initial; }
+
 #modelos {
   display: flex;
   width: 80%;
@@ -178,7 +214,8 @@ header {
     height: 196px;
     width: 100%;
     border: 1px solid #D5D5D5;
-    background-color: #FFF; }
+    background-color: #FFF;
+    text-indent: -9999px; }
   #modelos a {
     width: 100%;
     height: 36px;
